2007-06-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/dialog.[ch] (browser_dialog_goto_index):
	new function which takes an uri and selects its item from the
	index tree.

	* plug-ins/helpbrowser/helpbrowser.c (temp_proc_run): use it to
	select the right tree item when invoked from gimp.

2007-06-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/dialog.c: keep a reverse mapping
	uri -> GtkTreeIter around and use it to select the currently
	displayed help page in the index tree.

2007-06-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/distress-selection.scm: applied patch
	from Saul Goode that enables Distress Selection for grayscale images.

2007-06-04  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpcolorscale.c (gimp_color_scale_expose):
	revert last change, it looks ugly in themes which actually draw a
	box around the scale.

2007-06-04  Mukund Sivaraman  <muks@mukund.org>

	* app/vectors/gimpvectors-export.c: Added format string to dangerous
	fprintf() call without it, which directly print variable data.

2007-06-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorscale.c (gimp_color_scale_expose): pass
	NULL as detail to gtk_paint_box().

2007-06-04  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c (image_actions)
	* app/actions/layers-actions.c (layers_actions): renamed menu
	entries as suggested in bug #443384.

2007-06-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmagnifyoptions.c: remove compat property
	"threshold" because the parser now silently skips unknown
	properties.

2007-06-04  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrush-load.c: applied patch from Eric Lamarque
	which adds support for ABR v6 brushes. Did some minor cleanups in
	the patch, reordered functions and generally fixed error handling
	of the ABR parsers. Fixes bug #377016.

2007-06-04  Michael Natterer  <mitch@gimp.org>
