@@ -25,9 +25,10 @@
 
 #include "imap_browse.h"
 
-static GtkTargetEntry target_table[] = {
-   {"STRING", 0, 1 },
-   {"text/plain", 0, 2 }
+static const GtkTargetEntry target_table[] =
+{
+  {"STRING",     0, 1 },
+  {"text/plain", 0, 2 }
 };
 
 static void
