@@ -369,8 +369,9 @@ preview_set_cursor(Preview_t *preview, GdkCursorType cursor_type)
    return prev_cursor;
 }
 
-static const GtkTargetEntry target_table[] = {
-   {"STRING", 0, 1 },
+static const GtkTargetEntry target_table[] =
+{
+   {"STRING",     0, 1 },
    {"text/plain", 0, 2 }
 };
 
