@@ -250,8 +250,9 @@ object_moved_cb(Object_t *obj, gpointer data)
 #endif
 }
 
-static GtkTargetEntry target_table[] = {
-  {"STRING", 0, 1 },
+static const GtkTargetEntry target_table[] =
+{
+  {"STRING",     0, 1 },
   {"text/plain", 0, 2 }
 };
 
