@@ -1,3 +1,10 @@
+2007-06-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/helpbrowser/dialog.c
+	* plug-ins/imagemap/imap_browse.c
+	* plug-ins/imagemap/imap_preview.c
+	* plug-ins/imagemap/imap_selection.c: added const qualifiers.
+
 2007-06-05  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.[ch] (browser_dialog_goto_index):
